# riscv-decode

./: Cargo.toml  README.md
src/: compressed.rs  instruction.rs  lib.rs  types.rs
