[package]
name = "riscv-decode"
version = "0.2.3"
edition = "2018"
description = "A simple library for decoding RISC-V instructions"
repository = "https://github.com/fintelia/riscv-decode"
license = "MIT OR Apache-2.0"
categories = ["no-std", "embedded", "encoding", "parsing"]
keywords = ["riscv"]

[dependencies]
